# material2

./: package.json
src/a11y-demo/: a11y-material-module.ts
src/demo-app/: demo-material-module.ts  system-config.ts
src/demo-app/bottom-nav/: bottom-nav-demo-module.ts  bottom-nav-demo.html  bottom-nav-demo.scss  bottom-nav-demo.ts  routes.ts
src/demo-app/demo-app/: demo-app.ts  demo-module.ts  routes.ts
src/dev-app/: system-config.ts
src/dev-app/dev-app/: dev-app-layout.ts
src/lib/: public-api.ts
src/lib/bottom-nav/: BUILD.bazel  _bottom-nav-theme.scss  bottom-nav-module.ts  bottom-nav.scss  bottom-nav.ts  public-api.ts
src/lib/core/theming/: _all-theme.scss
