package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "bottom-nav",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/bottom-nav",
  assets = [":bottom-nav_css"],
  deps = [
    "//src/lib/core",
    "//src/cdk/platform",
  ],
  tsconfig = ":tsconfig-build.json",
)


sass_binary(
  name = "bottom-nav_scss",
  src = "botto-nav.scss",
  deps = ["//src/lib/core:core_scss_lib"],
)

# TODO(jelbourn): remove this when sass_binary supports specifying an output filename and dir.
# Copy the output of the sass_binary such that the filename and path match what we expect.
genrule(
  name = "bottom-nav_css",
  srcs = [":toolbar_scss"],
  outs = ["bottom-nav.css"],
  cmd = "cat $(locations :bottom-nav_scss) > $@",
)
